app/assets/stylesheets/pages/_projects_index.scss
.project-link {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  color: $new-blue;
  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
}

.musician-avatar {
  margin: 1px;
}

.fontawesome-buttons {
  font-size: 22px;
  display: flex;
  a {
    color: rgba(0,0,0,0.6);
    &:hover {
    color: rgba(0,0,0,0.4);
    }
  }
}

.delete-button {
  margin-right: 3px;
}

.create-title {
  color: white;
  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
  z-index: 2;
}

#new-project {
  background-color: rgba(104, 178, 223, 0.5);
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 0;
}

.project-box {
  position: relative;
  margin-top: 20px;
}

.modal-content {
  color: black;
}

.project-detail {
  position: relative;
  border-radius: 20px;
  margin-bottom: 10px;
  overflow: hidden;
  // box-shadow: 0 0 10px rgba(0,0,0,0.2);
  box-shadow: 10px 10px 20px 2px rgba(0,0,0, 0.1);
  height: 300px;
  background-color: white;
  &:hover {
    background-color: $new-blue;
    h4 {
      color: white;
      text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
    }
  }
  transition: all 0.2s ease;
}

.project-title {
  text-align:center;
  color: rgba(0,0,0,0.6);
}

.link-create-project {
  text-align:center;
  color: $new-blue;
  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

.project-tracklist {
  color: rgba(0,0,0,0.6);
  padding: 0px 20px 0px 20px;
}

.project-track {
  min-height: 40px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.main-title {
  margin-bottom: 25px;
  color: rgba(0,0,0,0.6);
  h3 {
    margin-top: 25px;
  }
}

h3.main-title {
  padding-top: 20px;
}

.project-main {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  &:hover {
    p {
      color: white;
    }
  }
}

.project-date {
  display: flex;
  align-items: center;
  justify-content: space-between;
  p {
    margin-bottom: 0px;
  }
  margin-bottom: 20px;
}

.project-main-layer {
  position: absolute;
  top: 130px;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: red;
  background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
}

.owner-avatar {
  position: absolute;
  top: 5px;
  right: 5px;
}

.small-margin {
  margin-right: -10px;
  margin-left: 0px;
}

.project-no-hover {
  z-index: 4;
  display: flex;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;
  color: $new-blue;
  h4 {
    font-weight: light;
    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
    letter-spacing: 2px;
  }
}

.deadline-project-card {
  position: absolute;
  bottom: 3px;
  left: 10px;
  padding: 10px;
  font-size: 14px;
  color: rgba(0,0,0, 0.5);
  padding-left: 6px;
}

#edit-project {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 4;
  color: rgba(0,0,0, 0.5);
  &:hover {
    color: white;
  }
}

h1 project-name {
  margin: 10px;
}

